--- a/historia.html
+++ b/historia.html
@@ -24,7 +24,7 @@
       <a href=""><button Class="btv"> AULA 6 </button></a>
       <a href="https://docs.google.com/presentation/d/1o91qerYezRI0JDT0af0SEStRKK1saaoj/edit?usp=drivesdk&ouid=102453837299334610632&rtpof=true&sd=true"><button Class="btv"> AULA 7 </button></a>
       <a href="https://docs.google.com/presentation/d/19LAkreVv3XOXsR7UL-6B9zmXtFT2fsqY/edit?usp=drivesdk&ouid=102453837299334610632&rtpof=true&sd=true"><button Class="btv"> AULA 8 </button></a>
-      <a href="https://docs.google.com/presentation/d/134vITPjxMnyS_OUQdzPmFiqs52G4xdmz/edit?usp=drivesdk&ouid=102453837299334610632&rtpof=true&sd=true"><button Class="btv"> AULA 9 </button></a>
+      <a href=""><button Class="btv"> AULA 9 </button></a>
       <a href="https://docs.google.com/presentation/d/1c4vtqCIXIt9lZyu8m3OCS_6XZqP6s5Hw/edit?usp=drivesdk&ouid=102453837299334610632&rtpof=true&sd=true"><button Class="btv"> AULA 10 </button></a>
       <a href=""><button Class="btv"> AULA 11 </button></a>
       <a href=""><button Class="btv"> AULA 12</button></a>
@@ -34,7 +34,7 @@
      <a href=""><button Class="btv"> QUESTÃO 6 </button></a>
      <a href="https://docs.google.com/document/d/14u_EvKXu45onNnrjobezFdzmxoIZuQTNojg0oM6-aS0/edit?usp=drivesdk"><button Class="btv"> QUESTÃO 7 </button></a>
      <a href="https://docs.google.com/document/d/14Qg91plzgqKttRYEbg749MZkwM1VGI4b2NUicK1OMs4/edit?usp=drivesdk"><button Class="btv"> QUESTÃO 8 </button></a>
-     <a href="https://docs.google.com/document/d/1KCttXEGxsqgLj78z4OwLtQIKSKS-U2m6/edit?usp=drivesdk&ouid=102453837299334610632&rtpof=true&sd=true"><button Class="btv"> QUESTÃO 9 </button></a>
+     <a href=""><button Class="btv"> QUESTÃO 9 </button></a>
      <a href="https://docs.google.com/document/d/1ZBOOp4BgU6mxTxlgvYI48NcH1ZjXMDurhBSmF5YW0ZM/edit?usp=drivesdk"><button Class="btv"> QUESTÃO 10 </button></a>
      <a href=""><button Class="btv"> QUESTÃO 11 </button></a>
      <a href=""><button Class="btv"> QUESTÃO 12 </button></a>
