--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 "> <button Class="ctv"> AULA 6 </button></a>
       <a href="https://docs.google.com/presentation/d/1w3zEY8MnV1Lo0jBE_TKBFlYv3-ek8NFy/edit?usp=drivesdk&ouid=102453837299334610632&rtpof=true&sd=true"><button Class="ctv"> AULA 7 </button></a>
       <a href="https://docs.google.com/presentation/d/1u8lHBvShHrBVtAw0pe6lvydJ5XpfcTak/edit?usp=drivesdk&ouid=102453837299334610632&rtpof=true&sd=true"><button Class="ctv"> AULA 8 </button></a>
-      <a href=""><button Class="ctv"> AULA 9 </button></a>
+      <a href="https://docs.google.com/presentation/d/134vITPjxMnyS_OUQdzPmFiqs52G4xdmz/edit?usp=drivesdk&ouid=102453837299334610632&rtpof=true&sd=true"><button Class="ctv"> AULA 9 </button></a>
       <a href="https://docs.google.com/presentation/d/1OFPq7DL69AoQxTpNrSzXAW9pYFzqwDTE/edit?usp=drivesdk&ouid=102453837299334610632&rtpof=true&sd=true"><button Class="ctv"> AULA 10 </button></a>
       <a href="https://docs.google.com/presentation/d/1koBVYEDVw6lPqp3MiV0ygoyO1GLr9SVE/edit?usp=drivesdk&ouid=102453837299334610632&rtpof=true&sd=true"><button Class="ctv"> AULA 11 </button></a>
       <a href=""><button Class="ctv"> AULA 12 </button></a>
@@ -37,7 +37,7 @@
      <a href="https://docs.google.com/document/d/155xV1rtFgR2g_vGOKh8ZcpQE51Ux37v0/edit?usp=drivesdk&ouid=102453837299334610632&rtpof=true&sd=true"><button Class="ctv"> QUESTÃO 6 </button></a>
      <a href="https://docs.google.com/document/d/1l0yBPZ0RtL-prZyRYxV5alMKEO7XXQQh/edit?usp=drivesdk&ouid=102453837299334610632&rtpof=true&sd=true"><button Class="ctv"> QUESTÃO 7 </button></a>
      <a href="https://docs.google.com/document/d/17VjsHrkkWDbBNAuJq01iNese6oGsKeGp/edit?usp=drivesdk&ouid=102453837299334610632&rtpof=true&sd=true"><button Class="ctv"> QUESTÃO 8  </button></a>
-     <a href=""><button Class="ctv"> QUESTÃO 9 </button></a>
+     <a href="https://docs.google.com/document/d/1KCttXEGxsqgLj78z4OwLtQIKSKS-U2m6/edit?usp=drivesdk&ouid=102453837299334610632&rtpof=true&sd=true"><button Class="ctv"> QUESTÃO 9 </button></a>
      <a href="https://docs.google.com/document/d/1QN_IK_rR5awnXgMXiu0EUAeFCgk3c69S/edit?usp=drivesdk&ouid=102453837299334610632&rtpof=true&sd=true"><button Class="ctv"> QUESTÃO 10 </button></a>
      <a href="https://docs.google.com/document/d/1E_r0itm-Fu4PVv-M0wfgUmVwWR9FGyqg/edit?usp=drivesdk&ouid=102453837299334610632&rtpof=true&sd=true"><button Class="ctv"> QUESTÃO 11 </button></a>
      <a href=""><button Class="ctv"> QUESTÃO 12 </button></a>
