--- a/historia.html
+++ b/historia.html
@@ -21,7 +21,7 @@
    </header>
    
    <div class="aulas">
-      <a href=""><button Class="btv"> AULA 6 </button></a>
+     <a href="" id="ah1"><button Class="btv"> AULA 6 </button></a>
       <a href="https://docs.google.com/presentation/d/1o91qerYezRI0JDT0af0SEStRKK1saaoj/edit?usp=drivesdk&ouid=102453837299334610632&rtpof=true&sd=true"><button Class="btv"> AULA 7 </button></a>
       <a href="https://docs.google.com/presentation/d/19LAkreVv3XOXsR7UL-6B9zmXtFT2fsqY/edit?usp=drivesdk&ouid=102453837299334610632&rtpof=true&sd=true"><button Class="btv"> AULA 8 </button></a>
       <a href=""><button Class="btv"> AULA 9 </button></a>
@@ -41,6 +41,8 @@
   </div>
  
       <p class="copry">&copy; Copyright Felipe Pires - 2022</p>
+      
+      <script src="main.js"></script>
 </body>
 
 </html>
