aula css uptate

--- a/historia.html
+++ b/historia.html
@@ -13,31 +13,33 @@
    <header>
       <nav>
          <ul>
-            <li><a id="ih" href="historia.html">HISTÓRIA</a></li>
-            <li><a href="index.html">GEOGRAFIA</a></li>
+            <li><a id="historia" href="historia.html">HISTÓRIA</a></li>
+            <li><a id="geografia" href="index.html">GEOGRAFIA</a></li>
          </ul>
       </nav>
       
    </header>
    
    <div class="aulas">
-     <a href="" id="ah1"><button Class="btv"> AULA 6 </button></a>
-      <a href="https://docs.google.com/presentation/d/1o91qerYezRI0JDT0af0SEStRKK1saaoj/edit?usp=drivesdk&ouid=102453837299334610632&rtpof=true&sd=true"><button Class="btv"> AULA 7 </button></a>
-      <a href="https://docs.google.com/presentation/d/19LAkreVv3XOXsR7UL-6B9zmXtFT2fsqY/edit?usp=drivesdk&ouid=102453837299334610632&rtpof=true&sd=true"><button Class="btv"> AULA 8 </button></a>
-      <a href=""><button Class="btv"> AULA 9 </button></a>
-      <a href="https://docs.google.com/presentation/d/1c4vtqCIXIt9lZyu8m3OCS_6XZqP6s5Hw/edit?usp=drivesdk&ouid=102453837299334610632&rtpof=true&sd=true"><button Class="btv"> AULA 10 </button></a>
-      <a href=""><button Class="btv"> AULA 11 </button></a>
-      <a href=""><button Class="btv"> AULA 12</button></a>
+      <a id="ah1" href=""><button Class="btv"> AULA 6 </button></a>
+      <a id="ah2" href=""><button Class="btv"> AULA 7 </button></a>
+      <a id="ah3" href=""><button Class="btv"> AULA 8 </button></a>
+      <a id="ah4" href=""><button Class="btv"> AULA 9 </button></a>
+      <a id="ah5" href=""><button Class="btv"> AULA 10 </button></a>
+      <a id="ah6" href=""><button Class="btv"> AULA 11 </button></a>
+      <a id="ah7" href=""><button Class="btv"> AULA 12</button></a>
+      <a id="ah8" href=""><button Class="btv"> AULA 13</button></a>
    </div>
   
   <div class="questoes">
-     <a href=""><button Class="btv"> QUESTÃO 6 </button></a>
-     <a href="https://docs.google.com/document/d/14u_EvKXu45onNnrjobezFdzmxoIZuQTNojg0oM6-aS0/edit?usp=drivesdk"><button Class="btv"> QUESTÃO 7 </button></a>
-     <a href="https://docs.google.com/document/d/14Qg91plzgqKttRYEbg749MZkwM1VGI4b2NUicK1OMs4/edit?usp=drivesdk"><button Class="btv"> QUESTÃO 8 </button></a>
-     <a href=""><button Class="btv"> QUESTÃO 9 </button></a>
-     <a href="https://docs.google.com/document/d/1ZBOOp4BgU6mxTxlgvYI48NcH1ZjXMDurhBSmF5YW0ZM/edit?usp=drivesdk"><button Class="btv"> QUESTÃO 10 </button></a>
-     <a href=""><button Class="btv"> QUESTÃO 11 </button></a>
-     <a href=""><button Class="btv"> QUESTÃO 12 </button></a>
+     <a id="qh1" href=""><button Class="btv"> QUESTÃO 6 </button></a>
+     <a id="qh2" href=""><button Class="btv"> QUESTÃO 7 </button></a>
+     <a id="qh3" href=""><button Class="btv"> QUESTÃO 8 </button></a>
+     <a id="qh4" href=""><button Class="btv"> QUESTÃO 9 </button></a>
+     <a id="qh5" href=""><button Class="btv"> QUESTÃO 10 </button></a>
+     <a id="qh6" href=""><button Class="btv"> QUESTÃO 11 </button></a>
+     <a id="qh7" href=""><button Class="btv"> QUESTÃO 12 </button></a>
+     <a id="qh8" href=""><button Class="btv"> QUESTÃO 13 </button></a>
   </div>
  
       <p class="copry">&copy; Copyright Felipe Pires - 2022</p>
