--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
    <header>
       <nav>
          <ul>
-            <li><a href="historia.html">HISTÓRIA</a></li>
-            <li><a id="ig" href="index.html">GEOGRAFIA</a></li>
+            <li><a id="historia" href="historia.html">HISTÓRIA</a></li>
+            <li><a id="geografia" href="index.html">GEOGRAFIA</a></li>
          </ul>
       </nav>
       
@@ -23,28 +23,29 @@
    
    
    <div class="aulas">
-       <a href ="https://docs.google.com/presentation/d/1rhQV1t3CxS0-IjLm6hnlZatWfli-jmYk/edit?usp=drivesdk&ouid=102453837299334610632&rtpof=true&sd=true
-"> <button Class="ctv"> AULA 6 </button></a>
-      <a href="https://docs.google.com/presentation/d/1w3zEY8MnV1Lo0jBE_TKBFlYv3-ek8NFy/edit?usp=drivesdk&ouid=102453837299334610632&rtpof=true&sd=true"><button Class="ctv"> AULA 7 </button></a>
-      <a href="https://docs.google.com/presentation/d/1u8lHBvShHrBVtAw0pe6lvydJ5XpfcTak/edit?usp=drivesdk&ouid=102453837299334610632&rtpof=true&sd=true"><button Class="ctv"> AULA 8 </button></a>
-      <a href="https://docs.google.com/presentation/d/134vITPjxMnyS_OUQdzPmFiqs52G4xdmz/edit?usp=drivesdk&ouid=102453837299334610632&rtpof=true&sd=true"><button Class="ctv"> AULA 9 </button></a>
-      <a href="https://docs.google.com/presentation/d/1OFPq7DL69AoQxTpNrSzXAW9pYFzqwDTE/edit?usp=drivesdk&ouid=102453837299334610632&rtpof=true&sd=true"><button Class="ctv"> AULA 10 </button></a>
-      <a href="https://docs.google.com/presentation/d/1koBVYEDVw6lPqp3MiV0ygoyO1GLr9SVE/edit?usp=drivesdk&ouid=102453837299334610632&rtpof=true&sd=true"><button Class="ctv"> AULA 11 </button></a>
-      <a href=""><button Class="ctv"> AULA 12 </button></a>
+      <a id="ag1" href =""><button Class="ctv"> AULA 6 </button></a>
+      <a id="ag2" href=""><button Class="ctv"> AULA 7 </button></a>
+      <a id="ag3" href=""><button Class="ctv"> AULA 8 </button></a>
+      <a id="ag4" href=""><button Class="ctv"> AULA 9 </button></a>
+      <a id="ag5" href=""><button Class="ctv"> AULA 10 </button></a>
+      <a id="ag6" href=""><button Class="ctv"> AULA 11 </button></a>
+      <a id="ag7" href=""><button Class="ctv"> AULA 12 </button></a>
+      <a id="ag8" href=""><button Class="ctv"> AULA 13 </button></a>
    </div>
   
   <div class="questoes">
-     <a href="https://docs.google.com/document/d/155xV1rtFgR2g_vGOKh8ZcpQE51Ux37v0/edit?usp=drivesdk&ouid=102453837299334610632&rtpof=true&sd=true"><button Class="ctv"> QUESTÃO 6 </button></a>
-     <a href="https://docs.google.com/document/d/1l0yBPZ0RtL-prZyRYxV5alMKEO7XXQQh/edit?usp=drivesdk&ouid=102453837299334610632&rtpof=true&sd=true"><button Class="ctv"> QUESTÃO 7 </button></a>
-     <a href="https://docs.google.com/document/d/17VjsHrkkWDbBNAuJq01iNese6oGsKeGp/edit?usp=drivesdk&ouid=102453837299334610632&rtpof=true&sd=true"><button Class="ctv"> QUESTÃO 8  </button></a>
-     <a href="https://docs.google.com/document/d/1KCttXEGxsqgLj78z4OwLtQIKSKS-U2m6/edit?usp=drivesdk&ouid=102453837299334610632&rtpof=true&sd=true"><button Class="ctv"> QUESTÃO 9 </button></a>
-     <a href="https://docs.google.com/document/d/1QN_IK_rR5awnXgMXiu0EUAeFCgk3c69S/edit?usp=drivesdk&ouid=102453837299334610632&rtpof=true&sd=true"><button Class="ctv"> QUESTÃO 10 </button></a>
-     <a href="https://docs.google.com/document/d/1E_r0itm-Fu4PVv-M0wfgUmVwWR9FGyqg/edit?usp=drivesdk&ouid=102453837299334610632&rtpof=true&sd=true"><button Class="ctv"> QUESTÃO 11 </button></a>
-     <a href=""><button Class="ctv"> QUESTÃO 12 </button></a>
+     <a id="qg1" href=""><button Class="ctv"> QUESTÃO 6 </button></a>
+     <a id="qg2" href=""><button Class="ctv"> QUESTÃO 7 </button></a>
+     <a id="qg3" href=""><button Class="ctv"> QUESTÃO 8  </button></a>
+     <a id="qg4" href=""><button Class="ctv"> QUESTÃO 9 </button></a>
+     <a id="qg5" href=""><button Class="ctv"> QUESTÃO 10 </button></a>
+     <a id="qg6" href=""><button Class="ctv"> QUESTÃO 11 </button></a>
+     <a id="qg7" href=""><button Class="ctv"> QUESTÃO 12 </button></a>
+     <a id="qg8" href=""><button Class="ctv"> QUESTÃO 13 </button></a>
   </div>
  
   <p class="copry">&copy; Copyright Felipe Pires - 2022</p>
-  
+  <script src="main.js"></script>
 </body>
 
 
