--- a/historia.html
+++ b/historia.html
@@ -14,7 +14,7 @@
       <nav>
          <ul>
             <li><a id="historia" href="historia.html">HISTÓRIA</a></li>
-            <li><a id="geografia" href="index.html">GEOGRAFIA</a></li>
+            <li><a href="index.html">GEOGRAFIA</a></li>
          </ul>
       </nav>
       
@@ -44,7 +44,7 @@
  
       <p class="copry">&copy; Copyright Felipe Pires - 2022</p>
       
-      <script src="main.js"></script>
+      <script src="his.js"></script>
 </body>
 
 </html>
