--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
    <header>
       <nav>
          <ul>
-            <li><a id="historia" href="historia.html">HISTÓRIA</a></li>
+            <li><a href="historia.html">HISTÓRIA</a></li>
             <li><a id="geografia" href="index.html">GEOGRAFIA</a></li>
          </ul>
       </nav>
@@ -45,7 +45,7 @@
   </div>
  
   <p class="copry">&copy; Copyright Felipe Pires - 2022</p>
-  <script src="main.js"></script>
+  <script src="geo.js"></script>
 </body>
 
 
