--- a/historia.html
+++ b/historia.html
@@ -19,17 +19,18 @@
       </nav>
       
    </header>
-   
-   <div class="aulas">
-      <a id="ah1" href=""><button Class="btv"> AULA 6 </button></a>
-      <a id="ah2" href=""><button Class="btv"> AULA 7 </button></a>
-      <a id="ah3" href=""><button Class="btv"> AULA 8 </button></a>
-      <a id="ah4" href=""><button Class="btv"> AULA 9 </button></a>
-      <a id="ah5" href=""><button Class="btv"> AULA 10 </button></a>
-      <a id="ah6" href=""><button Class="btv"> AULA 11 </button></a>
-      <a id="ah7" href=""><button Class="btv"> AULA 12</button></a>
-      <a id="ah8" href=""><button Class="btv"> AULA 13</button></a>
+   <div class="cont">
+      <div class="aulas">
+         <a id="ah1" href=""><button Class="btv"> AULA 6 </button></a>
+         <a id="ah2" href=""><button Class="btv"> AULA 7 </button></a>
+         <a id="ah3" href=""><button Class="btv"> AULA 8 </button></a>
+         <a id="ah4" href=""><button Class="btv"> AULA 9 </button></a>
+         <a id="ah5" href=""><button Class="btv"> AULA 10 </button></a>
+         <a id="ah6" href=""><button Class="btv"> AULA 11 </button></a>
+         <a id="ah7" href=""><button Class="btv"> AULA 12</button></a>
+         <a id="ah8" href=""><button Class="btv"> AULA 13</button></a>
    </div>
+
   
   <div class="questoes">
      <a id="qh1" href=""><button Class="btv"> QUESTÃO 6 </button></a>
@@ -41,7 +42,7 @@
      <a id="qh7" href=""><button Class="btv"> QUESTÃO 12 </button></a>
      <a id="qh8" href=""><button Class="btv"> QUESTÃO 13 </button></a>
   </div>
- 
+  </div>
       <p class="copry">&copy; Copyright Felipe Pires - 2022</p>
       
       <script src="his.js"></script>
