--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
    </header> 
    
    
-   
+   <div class="cont">
    <div class="aulas">
       <a id="ag1" href =""><button Class="ctv"> AULA 6 </button></a>
       <a id="ag2" href=""><button Class="ctv"> AULA 7 </button></a>
@@ -43,7 +43,7 @@
      <a id="qg7" href=""><button Class="ctv"> QUESTÃO 12 </button></a>
      <a id="qg8" href=""><button Class="ctv"> QUESTÃO 13 </button></a>
   </div>
- 
+  </div>
   <p class="copry">&copy; Copyright Felipe Pires - 2022</p>
   <script src="geo.js"></script>
 </body>
