--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
 <head>
    <meta charset="UTF-8">
    <meta name="viewport" content="wClassth=device-wClassth, initial-scale=1">
-   <link rel="stylesheet" href="reset.css">
-   <link rel="stylesheet" href="aula.css">
+   <link rel="stylesheet" href="./css/reset.css">
+   <link rel="stylesheet" href="./css/aula.css">
    <title>GEOGRAFIA - AULAS</title>
 </head>  
 
@@ -23,13 +23,13 @@
    
    <div class="cont">
    <div class="aulas">
-      <a id="ag1" href =""><button Class="ctv"> AULA 6 </button></a>
-      <a id="ag2" href=""><button Class="ctv"> AULA 7 </button></a>
-      <a id="ag3" href=""><button Class="ctv"> AULA 8 </button></a>
-      <a id="ag4" href=""><button Class="ctv"> AULA 9 </button></a>
-      <a id="ag5" href=""><button Class="ctv"> AULA 10 </button></a>
-      <a id="ag6" href=""><button Class="ctv"> AULA 11 </button></a>
-      <a id="ag7" href=""><button Class="ctv"> AULA 12 </button></a>
+      <a id="ag1" href =""><button Class="ctv"> AULA 25 </button></a>
+      <a id="ag2" href=""><button Class="ctv"> AULA 26 </button></a>
+      <a id="ag3" href=""><button Class="ctv"> AULA 27 </button></a>
+      <a id="ag4" href=""><button Class="ctv"> AULA 28 </button></a>
+      <a id="ag5" href=""><button Class="ctv"> AULA 29 </button></a>
+      <a id="ag6" href=""><button Class="ctv"> AULA 30 </button></a>
+      <a id="ag7" href=""><button Class="ctv"> AULA 31 </button></a>
       <a id="ag8" href=""><button Class="ctv"> AULA 13 </button></a>
    </div>
   
