--- a/historia.html
+++ b/historia.html
@@ -4,8 +4,8 @@
 <head>
    <meta charset="UTF-8">
    <meta name="viewport" content="wClassth=device-wClassth, initial-scale=1">
-   <link rel="stylesheet" href="reset.css">
-   <link rel="stylesheet" href="aula.css">
+   <link rel="stylesheet" href="./css/reset.css">
+   <link rel="stylesheet" href="./css/aula.css">
    <title>HISTÓRIA - AUlAS</title>
 </head>
 
@@ -17,30 +17,46 @@
             <li><a href="index.html">GEOGRAFIA</a></li>
          </ul>
       </nav>
-      
    </header>
+
    <div class="cont">
       <div class="aulas">
-         <a id="ah1" href=""><button Class="btv"> AULA 6 </button></a>
-         <a id="ah2" href=""><button Class="btv"> AULA 7 </button></a>
-         <a id="ah3" href=""><button Class="btv"> AULA 8 </button></a>
-         <a id="ah4" href=""><button Class="btv"> AULA 9 </button></a>
-         <a id="ah5" href=""><button Class="btv"> AULA 10 </button></a>
-         <a id="ah6" href=""><button Class="btv"> AULA 11 </button></a>
-         <a id="ah7" href=""><button Class="btv"> AULA 12</button></a>
-         <a id="ah8" href=""><button Class="btv"> AULA 13</button></a>
+         <a id="ah1" href=""><button Class="btv"> AULA 25 </button></a>
+         <a id="ah2" href=""><button Class="btv"> AULA 26 </button></a>
+         <a id="ah3" href=""><button Class="btv"> AULA 27 </button></a>
+         <a id="ah4" href=""><button Class="btv"> AULA 28 </button></a>
+         <a id="ah5" href=""><button Class="btv"> AULA 29 </button></a>
+         <a id="ah6" href=""><button Class="btv"> AULA 30 </button></a>
+         <a id="ah7" href=""><button Class="btv"> AULA 31</button></a>
+         <a id="ah8" href=""><button Class="btv"> AULA 32</button></a>
+         <a id="ah9" href=""><button Class="btv"> AULA 33 </button></a>
+         <a id="ah10" href=""><button Class="btv"> AULA 34 </button></a>
+         <a id="ah11" href=""><button Class="btv"> AULA 35 </button></a>
+         <a id="ah12" href=""><button Class="btv"> AULA 36 </button></a>
+         <a id="ah13" href=""><button Class="btv"> AULA 37 </button></a>
+         <a id="ah14" href=""><button Class="btv"> AULA 38 </button></a>
+         <a id="ah15" href=""><button Class="btv"> AULA 39</button></a>
+         <a id="ah16" href=""><button Class="btv"> AULA 40</button></a>
    </div>
 
   
   <div class="questoes">
-     <a id="qh1" href=""><button Class="btv"> QUESTÃO 6 </button></a>
-     <a id="qh2" href=""><button Class="btv"> QUESTÃO 7 </button></a>
-     <a id="qh3" href=""><button Class="btv"> QUESTÃO 8 </button></a>
-     <a id="qh4" href=""><button Class="btv"> QUESTÃO 9 </button></a>
-     <a id="qh5" href=""><button Class="btv"> QUESTÃO 10 </button></a>
-     <a id="qh6" href=""><button Class="btv"> QUESTÃO 11 </button></a>
-     <a id="qh7" href=""><button Class="btv"> QUESTÃO 12 </button></a>
-     <a id="qh8" href=""><button Class="btv"> QUESTÃO 13 </button></a>
+     <a id="qh1" href=""><button Class="btv"> QUESTÃO 25 </button></a>
+     <a id="qh2" href=""><button Class="btv"> QUESTÃO 26 </button></a>
+     <a id="qh3" href=""><button Class="btv"> QUESTÃO 27 </button></a>
+     <a id="qh4" href=""><button Class="btv"> QUESTÃO 28 </button></a>
+     <a id="qh5" href=""><button Class="btv"> QUESTÃO 29 </button></a>
+     <a id="qh6" href=""><button Class="btv"> QUESTÃO 30 </button></a>
+     <a id="qh7" href=""><button Class="btv"> QUESTÃO 31 </button></a>
+     <a id="qh8" href=""><button Class="btv"> QUESTÃO 32</button></a>
+     <a id="qh9" href=""><button Class="btv"> QUESTÃO 33 </button></a>
+     <a id="qh10" href=""><button Class="btv"> QUESTÃO 34 </button></a>
+     <a id="qh11" href=""><button Class="btv"> QUESTÃO 35 </button></a>
+     <a id="qh12" href=""><button Class="btv"> QUESTÃO 36 </button></a>
+     <a id="qh13" href=""><button Class="btv"> QUESTÃO 37 </button></a>
+     <a id="qh14" href=""><button Class="btv"> QUESTÃO 38 </button></a>
+     <a id="qh15" href=""><button Class="btv"> QUESTÃO 39 </button></a>
+     <a id="qh16" href=""><button Class="btv"> QUESTÃO 40 </button></a>
   </div>
   </div>
       <p class="copry">&copy; Copyright Felipe Pires - 2022</p>
